fix: add argument to codespell hook for custom dictionary

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -76,6 +76,8 @@ repos:
     rev: v2.4.1
     hooks:
       - id: codespell
+        args:
+          - -L=ratatui
         additional_dependencies:
           - tomli
 
