--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM rust:1.89.0-alpine AS builder
 
 LABEL maintainer="Wei Lee <mai@mai0313.com>" \
-    org.label-schema.name="rust_template" \
+    org.label-schema.name="llmwerewolf" \
     org.label-schema.vendor="Wei Lee" \
     org.label-schema.schema-version="1.0" \
     com.centurylinklabs.watchtower.stop-signal="SIGINT"
@@ -13,5 +13,5 @@ RUN cargo build --release --locked
 ########################################################################################
 
 FROM alpine:latest AS prod
-COPY --from=builder /app/target/release/rust_template /usr/local/bin/rust_template
-ENTRYPOINT ["rust_template"]
+COPY --from=builder /app/target/release/llmwerewolf /usr/local/bin/llmwerewolf
+ENTRYPOINT ["llmwerewolf"]
