feat: implement start.js for platform-specific binary execution

--- a/cli/nodejs/package.json
+++ b/cli/nodejs/package.json
@@ -24,7 +24,7 @@
     "analytics"
   ],
   "bin": {
-    "llmwerewolf": "bin/vct.js"
+    "llmwerewolf": "bin/start.js"
   },
   "engines": {
     "node": ">=18.0.0"
