--- a/cli/python/pyproject.toml
+++ b/cli/python/pyproject.toml
@@ -1,18 +1,12 @@
 [project]
-name = "llmwerewolf"
-version = "0.1.0"
-description = "Python wrapper that ships the LLM Werewolf Rust binary."
-authors = [
-    { name = "Wei Lee", email = "mai@mai0313.com" }
-]
+name = "llmwerewolf-rs"
+version = "0.0.0"
+description = "Python wrapper for the LLM Werewolf Rust binary."
 readme = "README.md"
+authors = [{ name = "Wei Lee", email = "mai@mai0313.com" }]
 license = { text = "MIT" }
 requires-python = ">=3.8"
-dependencies = []
-keywords = ["llm", "werewolf", "game", "cli", "rust"]
 classifiers = [
-    "Development Status :: 4 - Beta",
-    "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -20,18 +14,21 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
-    "Operating System :: OS Independent",
-    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+keywords = [
+    "cli",
+    "ai",
+    "werewolf",
+    "llm",
 ]
 
 [project.urls]
-Homepage = "https://github.com/Mai0313/LLMWereWolf"
-Repository = "https://github.com/Mai0313/LLMWereWolf"
-"Bug Tracker" = "https://github.com/Mai0313/LLMWereWolf/issues"
+Homepage = "https://github.com/Mai0313/LLMWereWolf-rs"
+Repository = "https://github.com/Mai0313/LLMWereWolf-rs"
+"Bug Tracker" = "https://github.com/Mai0313/LLMWereWolf-rs/issues"
 
 [project.scripts]
-llmwerewolf = "llmwerewolf:main"
+llmwerewolf-rs = "llmwerewolf:main"
 
 [build-system]
 requires = ["uv_build>=0.8.18,<0.9.0"]
