--- a/cli/python/pyproject.toml
+++ b/cli/python/pyproject.toml
@@ -28,7 +28,7 @@ Repository = "https://github.com/Mai0313/LLMWereWolf-rs"
 "Bug Tracker" = "https://github.com/Mai0313/LLMWereWolf-rs/issues"
 
 [project.scripts]
-llmwerewolf-rs = "llmwerewolf:main"
+llmwerewolf-rs = "llmwerewolf_rs:main"
 
 [build-system]
 requires = ["uv_build>=0.8.18,<0.9.0"]
